Overflow fix

--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -21,7 +21,6 @@ html {
       "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    overflow-x: hidden;
   }
 
   code {
